namespace ShoppingCartSystem;

public interface IProduct
{
  string Name { get; }
  decimal Price { get; }
}