namespace ShoppingCartSystem;

public record ProductQuantity(IProduct Product, int Quantity);
